Fixed review link's appearance
The white area was extending all the way to the edge of the page and
didn't look like the other pages. I fixed it, there were a few ending
tags in the wrong place.

--- a/styles.css
+++ b/styles.css
@@ -77,9 +77,8 @@ a:hover {
 }
 .sidebar3 {
 	float:left;
-	width:800px;
+	width:749px;
 	background:#FFFFFF;
-	margin:10px;
 }
 .sidebar1 p, .sidebar2 p {
 	padding:10px;
